sandbox/output
StringCalculator.java:24: error: missing return statement
    }
    ^
1 error
